Change quiz deadline

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Introduction to Neuroscience</h1>
 <h4 class="author">Michelle R. Greene</h4>
-<h4 class="date">Winter 2021</h4>
+<h4 class="date">Winter 2022</h4>
 
 </div>
 
@@ -251,7 +251,7 @@ div.tocify {
 <p>Instructor: Michelle R. Greene, Ph.D<br />
 Email: <a href="mailto:mgreene2@bates.edu">mgreene2@bates.edu</a><br />
 Office: Hathorn 106<br />
-Office hours: MW: 9:30am - 10:30am Unofficial: I’m happy to meet when office door is open!</p>
+Office hours: MW: 9:30am - 10:30am OR <a href="https://mrgreene09.github.io/IntroNeuroscience/meeting.html">Book me via calendar</a> if this time does not work.</p>
 <p>Teaching Assistant: Annie Li<br />
 Email: <a href="mailto:ali2@bates.edu">ali2@bates.edu</a><br />
 Office: TBA<br />
@@ -336,8 +336,6 @@ NO: <a href="https://nba.uth.tmc.edu/neuroscience/m/index.htm">Neuroscience Onli
 </li>
 <li>Perusall readings cannot be made up.<br />
 </li>
-<li>Daily poll participation cannot be made up.<br />
-</li>
 <li>If your problem set(s), research reflection, or ‘show and tell’ reflection is late, you will lose 10 percentage points per late day on that assignment. In other words, an assignment that would otherwise earn 100% would be worth 90% on the first late day, and 80% on the second late day. This policy does not apply to a documented personal or family emergency.</li>
 </ul>
 </div>
@@ -387,8 +385,8 @@ NO: <a href="https://nba.uth.tmc.edu/neuroscience/m/index.htm">Neuroscience Onli
 <div id="assessed-components" class="section level2">
 <h2>Assessed Components</h2>
 <p><strong>Weekly quizzes: 5% of semester grade each = 50% of semester total</strong><br />
-Quizzes are 20 questions each and will open each Thursday at noon. They are due each Friday at 5 pm. Feedback and answer keys will be released after each quiz closes.</p>
-<p><strong>Perusall reading: 15% of semester grade, or about 2.2% per day</strong><br />
+Quizzes are 20 questions each and will open each Thursday at noon. They are due each Friday at 8 pm. Feedback and answer keys will be released after each quiz closes.</p>
+<p><strong>Perusall reading: 15% of semester grade, or about 0.45% per day</strong><br />
 There will be a reading posted for each class period on Perusall. You can find our class Perusall link at the top of our Lyceum page. Perusall is a social reading annotation tool. In the PDF, you may highlight passages and figures for comment or question, follow up on the comments and questions or your colleagues, and use “upvoting” to endorse questions and comments. It’s a really great way of getting more out of your reading. As the annotations will in part guide the class activities, <em>you are expected to complete your annotations by midnight Eastern before each class session</em>.<br />
 <br />
 <strong>Important note</strong>: Perusall will assign you a “grade”, but it will not be used in this class. The primary reason for this is that their algorithm is a trade secret and I do not feel comfortable evaluating you with an algorithm that I may or may not agree with. Instead, your annotations will be graded on the following 0-1 scale: 0: does not meet expectations; 1: meets expectations. Please feel free to reach out if you have any questions about what constitutes a complete annotation.</p>
