--- a/index.html
+++ b/index.html
@@ -571,12 +571,12 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="odd">
 <td>01-31</td>
 <td>Synaptic Transmission</td>
-<td>ONI 5.1-5.3</td>
+<td><a href="https://drive.google.com/file/d/1PdYFvSXH0L4B78vkSc8m3FxpjgVFtc14/view?usp=sharing">ONI 5.1-5.3</a></td>
 </tr>
 <tr class="even">
 <td>02-02</td>
 <td>Synaptic Transmission</td>
-<td>NO Chapters 5 and 6</td>
+<td><a href="https://nba.uth.tmc.edu/neuroscience/m/s1/chapter05.html">NO Chapter 5</a></td>
 </tr>
 <tr class="odd">
 <td>02-03</td>
@@ -586,7 +586,7 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="even">
 <td>02-04</td>
 <td>Neurotransmitters</td>
-<td></td>
+<td><a href="https://drive.google.com/file/d/1RPmCfMkz5DQOuvb8MPrm4pSmYQ8mIHC9/view?usp=sharing">ONI Chapter 5.4</a></td>
 </tr>
 <tr class="odd">
 <td></td>
@@ -610,12 +610,12 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="odd">
 <td>02-07</td>
 <td>Auditory system</td>
-<td></td>
+<td><a href="https://drive.google.com/file/d/1RQEbxWWw3FSN-FKHAqyZh0WrHdxFfUTJ/view?usp=sharing">ONI 8.1 and 8.2</a></td>
 </tr>
 <tr class="even">
 <td>02-09</td>
 <td>Visual system</td>
-<td></td>
+<td><a href="https://drive.google.com/file/d/1RRvtA6GJytyqmd7h8gJ0miqTdPVlRZlZ/view?usp=sharing">ONI 7.1-7.3</a></td>
 </tr>
 <tr class="odd">
 <td>02-10</td>
@@ -625,7 +625,7 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="even">
 <td>02-11</td>
 <td>Visual system</td>
-<td></td>
+<td><a href="https://drive.google.com/file/d/1RVXUlYm2tysOTLegW-pwawXS3Hln0ijj/view?usp=sharing">ONI 7.4</a></td>
 </tr>
 <tr class="odd">
 <td></td>
@@ -646,12 +646,12 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="odd">
 <td>02-14</td>
 <td>Olfaction and taste</td>
-<td></td>
+<td><a href="https://drive.google.com/file/d/1RVv89Z9ufLkV2RJYhgV304W0azo6qMwf/view?usp=sharing">ONI 9.1-9.2</a></td>
 </tr>
 <tr class="even">
 <td>02-16</td>
 <td>Somatic senses</td>
-<td></td>
+<td><a href="https://drive.google.com/file/d/1RWEM955-mgsbc_CkJxdAHc0Usxes8iV5/view?usp=sharing">ONI 8.3</a></td>
 </tr>
 <tr class="odd">
 <td>02-17</td>
@@ -661,7 +661,7 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="even">
 <td>02-18</td>
 <td>Motor systems</td>
-<td></td>
+<td><a href="https://drive.google.com/file/d/1RZq6GTQljmg8-5kLMyMwfXQqxAAJuErm/view?usp=sharing">ONI 10.1-10.2</a></td>
 </tr>
 <tr class="odd">
 <td></td>
@@ -702,7 +702,7 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="odd">
 <td>02-28</td>
 <td>Motor systems</td>
-<td></td>
+<td><a href="https://drive.google.com/file/d/1RZv67B8RK-4Ii5vJilFjByh8SbnlKOI8/view?usp=sharing">ONI 10.3-10.4</a></td>
 </tr>
 </tbody>
 </table>
