Updates to readings

--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="even">
 <td>02-18</td>
 <td>Motor systems</td>
-<td><a href="https://drive.google.com/file/d/1RZq6GTQljmg8-5kLMyMwfXQqxAAJuErm/view?usp=sharing">ONI 10.1-10.2</a></td>
+<td><a href="https://drive.google.com/file/d/1RZv67B8RK-4Ii5vJilFjByh8SbnlKOI8/view?usp=sharing">ONI 10.3-10.4</a></td>
 </tr>
 <tr class="odd">
 <td></td>
@@ -702,7 +702,7 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="odd">
 <td>02-28</td>
 <td>Motor systems</td>
-<td><a href="https://drive.google.com/file/d/1RZv67B8RK-4Ii5vJilFjByh8SbnlKOI8/view?usp=sharing">ONI 10.3-10.4</a></td>
+<td><a href="https://drive.google.com/file/d/1RZq6GTQljmg8-5kLMyMwfXQqxAAJuErm/view?usp=sharing">ONI 10.1-10.2</a></td>
 </tr>
 </tbody>
 </table>
@@ -710,6 +710,11 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <div id="unit-4-behavioral-neuroscience" class="section level2">
 <h2>Unit 4: Behavioral Neuroscience</h2>
 <table>
+<colgroup>
+<col width="19%" />
+<col width="46%" />
+<col width="34%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th>Date</th>
@@ -721,7 +726,7 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="odd">
 <td>03-02</td>
 <td>Eating and drinking</td>
-<td></td>
+<td><a href="https://nba.uth.tmc.edu/neuroscience/m/s4/chapter04.html">NO chapter 4</a></td>
 </tr>
 <tr class="even">
 <td>03-03</td>
@@ -731,7 +736,7 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="odd">
 <td>03-04</td>
 <td>Eating and drinking</td>
-<td></td>
+<td><a href="http://neuroscience.openetext.utoronto.ca/chapter/chapter-1-the-gut-microbiome-and-its-impact-on-the-brain/">Canadian Open Textbook 4.1</a>; <a href="http://neuroscience.openetext.utoronto.ca/chapter/4-2-gut-microbiome-and-the-brain/">Canadian Open Textbook 4.2</a></td>
 </tr>
 <tr class="even">
 <td></td>
@@ -741,6 +746,11 @@ Participation in research is a valuable way to get first-hand exposure to the va
 </tbody>
 </table>
 <table>
+<colgroup>
+<col width="19%" />
+<col width="46%" />
+<col width="34%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th>Date</th>
@@ -752,12 +762,12 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="odd">
 <td>03-07</td>
 <td>Sleep</td>
-<td></td>
+<td><a href="https://drive.google.com/file/d/1RyPmpABIP8Dwk1IZfOoobpYvCbCsDfNI/view?usp=sharing">Selection from Freberg <em>Discovering Behavioral Neuroscience</em></a></td>
 </tr>
 <tr class="even">
 <td>03-09</td>
 <td>Sleep</td>
-<td></td>
+<td><a href="https://drive.google.com/file/d/1S-_PwPHWNZXoh9Cq97VY03PGjyFZGAQs/view?usp=sharing">Selection from Freberg <em>Discovering Behavioral Neuroscience</em></a></td>
 </tr>
 <tr class="odd">
 <td>03-10</td>
@@ -767,7 +777,7 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="even">
 <td>03-11</td>
 <td>Sex, gender, sexual orientation, and reproduction</td>
-<td></td>
+<td><a href="https://drive.google.com/file/d/1S0ZNh437WUAYuX9PQ5glislOgfhL_kAW/view?usp=sharing">Selection from Freberg <em>Discovering Behavioral Neuroscience</em> pages 1-26 required, 27-37 optional</a></td>
 </tr>
 <tr class="odd">
 <td></td>
@@ -788,7 +798,7 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="odd">
 <td>03-14</td>
 <td>Drugs and addiction</td>
-<td></td>
+<td><a href="https://drive.google.com/file/d/1S1KqVKZ11sm8Av42C8z0CkRKV2Vw7jTS/view?usp=sharing">ONI 11.1-11.3</a></td>
 </tr>
 <tr class="even">
 <td>03-16</td>
