--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="even">
 <td>04-01</td>
 <td>Learning and plasticity</td>
-<td></td>
+<td><a href="https://nba.uth.tmc.edu/neuroscience/m/s4/chapter07.html">NO Chapter 7</a></td>
 </tr>
 <tr class="odd">
 <td></td>
