Fixed end of semester order

--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tbody>
 <tr class="odd">
 <td>04-04</td>
-<td>Learning and plasticity</td>
+<td>Language</td>
 <td></td>
 </tr>
 <tr class="even">
@@ -929,7 +929,7 @@ Participation in research is a valuable way to get first-hand exposure to the va
 </tr>
 <tr class="even">
 <td>04-08</td>
-<td>Language</td>
+<td>Consciousness</td>
 <td></td>
 </tr>
 <tr class="odd">
