Finished readings for penultimate week

--- a/index.html
+++ b/index.html
@@ -904,6 +904,11 @@ Participation in research is a valuable way to get first-hand exposure to the va
 </tbody>
 </table>
 <table>
+<colgroup>
+<col width="19%" />
+<col width="46%" />
+<col width="34%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th>Date</th>
@@ -915,12 +920,12 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="odd">
 <td>04-04</td>
 <td>Language</td>
-<td></td>
+<td><a href="https://drive.google.com/file/d/1SVZfudCCTwFV8BGA5gvoVp0rKleKO9Yh/view?usp=sharing">ONI 14.2</a></td>
 </tr>
 <tr class="even">
 <td>04-06</td>
 <td>Consciousness</td>
-<td></td>
+<td><a href="http://www.scholarpedia.org/article/Neural_correlates_of_consciousness">Scholarpedia: Neural Correlates of Consciousness</a></td>
 </tr>
 <tr class="odd">
 <td>04-07</td>
@@ -930,7 +935,7 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="even">
 <td>04-08</td>
 <td>Consciousness</td>
-<td></td>
+<td><a href="https://drive.google.com/file/d/1SaRL_Etm_zBzYMLkOegHvZUMyXfahaDJ/view?usp=sharing">Owen (2016) Decoding thoughts in disorders of consciousness</a></td>
 </tr>
 <tr class="odd">
 <td></td>
