--- a/index.html
+++ b/index.html
@@ -959,12 +959,12 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <tr class="odd">
 <td>04-11</td>
 <td>Brain disorders</td>
-<td></td>
+<td><a href="https://drive.google.com/file/d/1ScPb7E3ATvBrMejfSOjXCmTCccP5Ky4H/view?usp=sharing">ONI Chapter 16</a></td>
 </tr>
 <tr class="even">
 <td>04-13</td>
 <td>Brain disorders</td>
-<td></td>
+<td><a href="https://drive.google.com/file/d/1Sd-QVHwcDu-vTbl7YBeK0lrPXidRyu9i/view?usp=sharing">Selections on disorders</a></td>
 </tr>
 <tr class="odd">
 <td>04-14</td>
@@ -975,11 +975,6 @@ Participation in research is a valuable way to get first-hand exposure to the va
 <td>04-15</td>
 <td>Mythbusting Neuroscience</td>
 <td></td>
-</tr>
-<tr class="odd">
-<td></td>
-<td></td>
-<td><strong>Problem Set 2 Due</strong></td>
 </tr>
 </tbody>
 </table>
